src/test/deca/context/invalid/created/decl_class/var_method_unkown.deca
// Description :
//    une variable dans la methode n'est pas déclarée 
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 11 : (0.1) Identificateur x non défini

class A {

int met(){
	return x;
}
}